# protobuf_example_cpp

./: CMakeLists.txt  README.md  main.cpp
protobuf/: Person.proto
protobuf_compiled/: Person.pb.cc  Person.pb.h
